--- a/templates/project/res/values/themes.xml
+++ b/templates/project/res/values/themes.xml
@@ -20,13 +20,13 @@
 <resources>
     <style name="Theme.App.SplashScreen" parent="Theme.SplashScreen.IconBackground">
       <!-- Optional: Set the splash screen background. (Default: #FFFFFF) -->
-      <item name="windowSplashScreenBackground">@color/cdv_splashscreen_background</item>
+      <item name="windowSplashScreenBackground">@android:color/white</item>
 
       <!-- Required: Add either a drawable or an animated drawable -->
-      <item name="windowSplashScreenAnimatedIcon">@drawable/ic_cdv_splashscreen</item>
+      <item name="windowSplashScreenAnimatedIcon">@android:color/transparent</item>
 
       <!-- Required: For animated icons -->
-      <item name="windowSplashScreenAnimationDuration">200</item>
+      <item name="windowSplashScreenAnimationDuration">0</item>
 
       <!-- Required: Set the theme of the Activity that directly follows your splash screen. -->
       <item name="postSplashScreenTheme">@style/Theme.AppCompat.NoActionBar</item>
